issue 68: update docs.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -51,6 +51,11 @@
         <td> A comma separated list of options to pass to JSLint. </td>
         <td> No </td>
       </tr>
+      <tr>
+        <td> timeout </td>
+        <td> How long JSLint has to run, in seconds.  If not specified, there is no timeout. </td>
+        <td> No </td>
+      </tr>
     </table>
     <p>
       The valid list of options is defined by the
