--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -51,6 +51,8 @@ Usage: jslint4java [options]
         --safe       If use of some browser features should be restricted
         --sloppy     If the 'use strict'; pragma is optional
         --sub        If all forms of subscript notation are tolerated
+        --timeout    Maximum number of seconds JSLint can run for
+                     Default: 0
         --undef      If variables can be declared out of order
         --unparam    If unused parameters should be tolerated
         --vars       If multiple var statements per function should be allowed
