--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -160,6 +160,12 @@ $ mvn jslint4java:lint
         <td><code>${basedir}/src/main/webapp</code></td>
       </tr>
 
+      <tr>
+        <td><code>&lt;timeout&gt;</code></td>
+        <td>How many seconds JSLint is allowed to run for.</td>
+        <td>infinite</td>
+      </tr>
+
     </table>
     
     <script type="text/javascript">prettyPrint()</script>
