--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -64,10 +64,10 @@
     </p>
     <dl>
 <!-- // BEGIN-OPTIONS -->
+    <dt>anon <dd>If the space may be omitted in anonymous function declarations
     <dt>bitwise <dd>If bitwise operators should be allowed
     <dt>browser <dd>If the standard browser globals should be predefined
     <dt>cap <dd>If upper case html should be allowed
-    <dt>confusion <dd>If types can be used inconsistently
     <dt>continue <dd>If the continuation statement should be tolerated
     <dt>css <dd>If css workarounds should be tolerated
     <dt>debug <dd>If debugger statements should be allowed
