issue 67: fix maven docs.

--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>jslint4java command line usage</title>
+    <title>jslint4java maven plugin</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="jslint4java.css" type="text/css" rel="stylesheet" />
     <link href="prettify.css" type="text/css" rel="stylesheet" />
@@ -122,7 +122,7 @@ $ mvn jslint4java:lint
       <tr>
         <td><code>&lt;includes&gt;</code></td>
         <td>A comma separated list of filename patterns lint.</td>
-        <td><code>**/*.java</code></td>
+        <td><code>**/*.js</code></td>
       </tr>
 
       <tr>
