Don't interpolate variables in docs.

--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -189,7 +189,7 @@ $ mvn jslint4java:lint
         </td>
         <td>
           <pre class="prettyify">
-&lt;outputDirectory&gt;${project.build.directory}/jslint4java&lt;/outputDirectory&gt;
+&lt;outputDirectory&gt;\${project.build.directory}/jslint4java&lt;/outputDirectory&gt;
           </pre>
         </td>
       </tr>
@@ -200,7 +200,7 @@ $ mvn jslint4java:lint
         <td>
           <pre class="prettyify">
 &lt;sourceFolders&gt;
-  &lt;sourceFolder&gt;${basedir}/src/main/webapp&lt;/sourceFolder&gt;
+  &lt;sourceFolder&gt;\${basedir}/src/main/webapp&lt;/sourceFolder&gt;
 &lt;/sourceFolders&gt;
           </pre>
         </td>
