issue 78: add a --warnings option.
This is a jslint4java specific option to enable warnings from JSLint as well.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -95,6 +95,7 @@
     <dt>undef <dd>If variables can be declared out of order
     <dt>unparam <dd>If unused parameters should be tolerated
     <dt>vars <dd>If multiple var statements per function should be allowed
+    <dt>warnings <dd>Enable additional warnings (jslint4java)
     <dt>white <dd>If sloppy whitespace is tolerated
     <dt>widget <dd>If the yahoo widgets globals should be predefined
     <dt>windows <dd>If ms windows-specific globals should be predefined
