Update to JSLint 2012-05-09.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -91,13 +91,13 @@
     <dt>regexp <dd>If the . should be allowed in regexp literals
     <dt>rhino <dd>If the rhino environment globals should be predefined
     <dt>sloppy <dd>If the 'use strict'; pragma is optional
+    <dt>stupid <dd>If really stupid practices are tolerated
     <dt>sub <dd>If all forms of subscript notation are tolerated
     <dt>undef <dd>If variables can be declared out of order
     <dt>unparam <dd>If unused parameters should be tolerated
     <dt>vars <dd>If multiple var statements per function should be allowed
     <dt>warnings <dd>Enable additional warnings (jslint4java)
     <dt>white <dd>If sloppy whitespace is tolerated
-    <dt>widget <dd>If the yahoo widgets globals should be predefined
     <dt>windows <dd>If ms windows-specific globals should be predefined
 <!-- // END-OPTIONS -->
 
