Update to JSLint 2012-07-23.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -93,6 +93,7 @@
     <dt>sloppy <dd>If the 'use strict'; pragma is optional
     <dt>stupid <dd>If really stupid practices are tolerated
     <dt>sub <dd>If all forms of subscript notation are tolerated
+    <dt>todo <dd>If todo comments are tolerated
     <dt>undef <dd>If variables can be declared out of order
     <dt>unparam <dd>If unused parameters should be tolerated
     <dt>vars <dd>If multiple var statements per function should be allowed
