Update to JSLint 2013-04-10.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -64,25 +64,22 @@
     </p>
     <dl>
 <!-- // BEGIN-OPTIONS -->
-    <dt>anon <dd>If the space may be omitted in anonymous function declarations
     <dt>bitwise <dd>If bitwise operators should be allowed
     <dt>browser <dd>If the standard browser globals should be predefined
+    <dt>closure <dd>If google closure idioms should be tolerated
     <dt>continue <dd>If the continuation statement should be tolerated
-    <dt>css <dd>If css workarounds should be tolerated
     <dt>debug <dd>If debugger statements should be allowed
     <dt>devel <dd>If logging should be allowed (console, alert, etc.)
     <dt>eqeq <dd>If == should be allowed
     <dt>es5 <dd>If es5 syntax should be allowed
     <dt>evil <dd>If eval should be allowed
     <dt>forin <dd>If for in statements need not filter
-    <dt>fragment <dd>If html fragments should be allowed
     <dt>indent <dd>The indentation factor
     <dt>maxerr <dd>The maximum number of errors to allow
     <dt>maxlen <dd>The maximum length of a source line
     <dt>newcap <dd>If constructor names capitalization is ignored
     <dt>node <dd>If node.js globals should be predefined
     <dt>nomen <dd>If names may have dangling _
-    <dt>on <dd>If html event handlers should be allowed
     <dt>passfail <dd>If the scan should stop on first error
     <dt>plusplus <dd>If increment/decrement should be allowed
     <dt>predef <dd>The names of predefined global variables
