Update to JSLint 2013-05-01.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -64,6 +64,7 @@
     </p>
     <dl>
 <!-- // BEGIN-OPTIONS -->
+    <dt>ass <dd>If assignment expressions should be allowed
     <dt>bitwise <dd>If bitwise operators should be allowed
     <dt>browser <dd>If the standard browser globals should be predefined
     <dt>closure <dd>If google closure idioms should be tolerated
@@ -90,10 +91,9 @@
     <dt>stupid <dd>If really stupid practices are tolerated
     <dt>sub <dd>If all forms of subscript notation are tolerated
     <dt>todo <dd>If todo comments are tolerated
-    <dt>undef <dd>If variables can be declared out of order
     <dt>unparam <dd>If unused parameters should be tolerated
     <dt>vars <dd>If multiple var statements per function should be allowed
-    <dt>warnings <dd>Enable additional warnings (jslint4java)
+    <dt>warnings <dd>Unused
     <dt>white <dd>If sloppy whitespace is tolerated
     <dt>windows <dd>If ms windows-specific globals should be predefined
 <!-- // END-OPTIONS -->
