--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -38,7 +38,7 @@
             &lt;configuration&gt;
               &lt;failOnError&gt;true&lt;/failOnError&gt;
               &lt;options&gt;
-                &lt;undef&gt;true&lt;/undef&gt;
+                &lt;es5&gt;true&lt;/es5&gt;
               &lt;/options&gt;
             &lt;/configuration&gt;
           &lt;/execution&gt;
@@ -83,7 +83,7 @@ $ mvn jslint4java:lint
         &lt;configuration&gt;
           &lt;failOnError&gt;true&lt;/failOnError&gt;
           &lt;options&gt;
-            &lt;undef&gt;true&lt;/undef&gt;
+            &lt;es5&gt;true&lt;/es5&gt;
           &lt;/options&gt;
         &lt;/configuration&gt;
       &lt;/plugin&gt;
@@ -160,7 +160,7 @@ $ mvn jslint4java:lint
           <pre class="prettyprint">
 &lt;maxlen&gt;72&lt;/maxlen&gt;
 &lt;predef&gt;console, jQuery&lt;/predef&gt;
-&lt;undef&gt;true&lt;/undef&gt;
+&lt;es5&gt;true&lt;/es5&gt;
           </pre>
           Please see
           <a href="apidocs/com/googlecode/jslint4java/Option.html">Option</a>
