--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -13,53 +13,48 @@
     <p>jslint4java can be run as an executable jar file:</p>
 
     <pre class="prettyprint"><span class="nocode">$ java -jar jslint4java-${project.version}.jar
-Usage: jslint4java [options]
- file.js ...
-  Options:
-        --adsafe     If adsafe rules should be enforced
-        --bitwise    If bitwise operators should be allowed
-        --browser    If the standard browser globals should be predefined
-        --confusion  If types can be used inconsistently
-        --continue   If the continuation statement should be tolerated
-        --css        If css workarounds should be tolerated
-        --debug      If debugger statements should be allowed
-        --devel      If logging should be allowed (console, alert, etc.)
-        --encoding   Specify the input encoding
-        --eqeq       If == should be allowed
-        --es5        If es5 syntax should be allowed
-        --evil       If eval should be allowed
-        --forin      If for in statements need not filter
-        --fragment   If html fragments should be allowed
-        --help       Display usage information
-                     Default: false
-        --indent     The indentation factor
-        --jslint     Specify an alternative version of jslint.js
-        --maxerr     The maximum number of errors to allow
-        --maxlen     The maximum length of a source line
-        --newcap     If constructor names capitalization is ignored
-        --node       If node.js globals should be predefined
-        --nomen      If names may have dangling _
-        --on         If html event handlers should be allowed
-        --passfail   If the scan should stop on first error
-        --plusplus   If increment/decrement should be allowed
-        --predef     The names of predefined global variables
-        --regexp     If the . should be allowed in regexp literals
-        --report     Display report in different formats: plain, xml, junit,
-                     checkstyle and report
-        --rhino      If the rhino environment globals should be predefined
-        --safe       If use of some browser features should be restricted
-        --sloppy     If the 'use strict'; pragma is optional
-        --sub        If all forms of subscript notation are tolerated
-        --timeout    Maximum number of seconds JSLint can run for
-                     Default: 0
-        --undef      If variables can be declared out of order
-        --unparam    If unused parameters should be tolerated
-        --vars       If multiple var statements per function should be allowed
-        --white      If sloppy whitespace is tolerated
-        --widget     If the yahoo widgets globals should be predefined
-        --windows    If ms windows-specific globals should be predefined
+Usage: jslint4java [options] file.js ...
 
-using jslint version 2011-06-11
+ --ass        If assignment expressions should be allowed
+ --bitwise    If bitwise operators should be allowed
+ --browser    If the standard browser globals should be predefined
+ --closure    If google closure idioms should be tolerated
+ --continue   If the continuation statement should be tolerated
+ --debug      If debugger statements should be allowed
+ --devel      If logging should be allowed (console, alert, etc.)
+ --encoding   Specify the input encoding
+ --eqeq       If == should be allowed
+ --es5        If es5 syntax should be allowed
+ --evil       If eval should be allowed
+ --forin      If for in statements need not filter
+ --help       Display usage information
+ --indent     The indentation factor
+ --jslint     Specify an alternative version of jslint.js
+ --maxerr     The maximum number of errors to allow
+ --maxlen     The maximum length of a source line
+ --newcap     If constructor names capitalization is ignored
+ --node       If node.js globals should be predefined
+ --nomen      If names may have dangling _
+ --passfail   If the scan should stop on first error
+ --plusplus   If increment/decrement should be allowed
+ --predef     The names of predefined global variables
+ --properties If all property names must be declared with /*properties*/
+ --regexp     If the . should be allowed in regexp literals
+ --report     Display report in different formats: plain, xml, junit, checkstyle and report
+ --rhino      If the rhino environment globals should be predefined
+ --sloppy     If the 'use strict'; pragma is optional
+ --stupid     If really stupid practices are tolerated
+ --sub        If all forms of subscript notation are tolerated
+ --timeout    Maximum number of seconds JSLint can run for
+ --todo       If todo comments are tolerated
+ --unparam    If unused parameters should be tolerated
+ --vars       If multiple var statements per function should be allowed
+ --version    Show the version of JSLint in use.
+ --warnings   Unused
+ --white      If sloppy whitespace is tolerated
+ --windows    If ms windows-specific globals should be predefined
+
+using jslint version 2013-05-01
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
